--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-/node_modules
-/dist
-/.tmp
-/.sass-cache
-/bower_components
-/test
-/old
+
+[Ll]ibs/
+
+node_modules/
+dist/
+
+.sass-cache/
+bower_components/
+test/
+old/
+
+*.tmp
+*.* x
+
 *.py[cod]
 *.bak
 *.egg
